Layout Fixes
Still have to figure out some issues, not really digging the body size
at 62.5% to make REM units easier to work with. This causes the font
size to mess with the grids, while it could be fixed for layout with not
too much effort, it could be a giant pain once you start throwing media
queries on other random elements with a REM size set on the container.

--- a/scss/_defaults.scss
+++ b/scss/_defaults.scss
@@ -16,8 +16,7 @@ body {
   background-color: #eee;
   color: #333;
   font-family: 'Source Sans Pro', sans-serif;
-  // @include font-size(2);
-  font-size: 2em;
+  @include font-size(2);
   -webkit-font-smoothing: antialiased;
   font-weight: 400;
   line-height: 1.625;
