--- a/scss/_footer-widgets.scss
+++ b/scss/_footer-widgets.scss
@@ -1,7 +1,6 @@
 .footer-widgets {
   background-color: #fff;
   clear: both;
-  @include font-size(1.8);
   padding: 60px 0;
 }
 
