--- a/scss/assets/_mixins.scss
+++ b/scss/assets/_mixins.scss
@@ -5,17 +5,7 @@
 @import 'susy';
 
 // media query breakpoint mixin - scottnix.com/placement-of-media-queries/
-@mixin breakpoint($point) {
-  @if $point == medium {
-    @media (min-width: 500px)  { @content; }
-  }
-  @else if $point == large {
-    @media (min-width: 900px) { @content; }
-  }
-  @else if $point { // allows custom breakpoints
-    @media (min-width: $point) { @content; }
-  }
-}
+
 
 // rem font sizing mixin - https://css-tricks.com/snippets/css/less-mixin-for-rem-font-sizing/
 @mixin font-size($sizeValue: 1.6) {
