--- a/scss/style.scss
+++ b/scss/style.scss
@@ -74,6 +74,18 @@
 
 @import 'mixins'; // works?
 
+@mixin breakpoint($point) {
+  @if $point == medium {
+    @media (min-width: 50em)  { @content; }
+  }
+  @else if $point == large {
+    @media (min-width: 70em) { @content; }
+  }
+  @else if $point { // allows custom breakpoints
+    @media (min-width: $point) { @content; }
+  }
+}
+
 /* # Reset
 ---------------------------------------------------------------------------------------------------- */
 
